--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -88,3 +88,16 @@ footer {
 .super-black{
     color:black;
 }
+.clip-background {
+    clip-path: polygon(0 0, 84% 0, 60% 100%, 0% 100%);
+    height: 500px;
+}
+ul li{
+    list-style-type:none;
+}
+.big-header{
+    color:white;
+    font-weight:bold;
+    font-size:60px;
+    line-height:70px;
+}
