Thay đổi giao diện trang chủ

--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -3,21 +3,23 @@
 ViewBag.Title = "Home Page";
 ViewBag.Active = "#HomeBtn";
 }
-<div class="container px-3 clip-background bg-info">
-    <div class="row">
-        <div class="col-lg-6">
-            <p class="big-header">Ốp lưng thời trang cho riêng bạn</p>
-            <p class="smaller-header">Trùng lặp phong cách? Không còn là vấn đề</p>
-            <a href="#">CHỌN NGAY ỐP LƯNG</a>
-        </div>
-        <div class="col-lg-6">
-            <div class="row align-items-center">
-                <div class="col-auto flow-card">
-                    <ul class="text-decoration-none group-text">
-                        <li><i class="fas fa-circle circle-bullet" ></i>Bạn là người thích sự duy nhất</li>
-                        <li><i class="fas fa-circle circle-bullet"></i>Bạn muốn thiết kế chiếc ốp lưng cho riêng mình?</li>
-                        <li><i class="fas fa-circle circle-bullet"></i>Hãy để chúng tôi giúp bạn làm điều đó. <a href="#">Click!</a></li>
-                    </ul>
+<div class="container-fluid clip-background bg-white p-0 m-0">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <p class="big-header">Ốp lưng thời trang cho riêng bạn</p>
+                <p class="smaller-header">Trùng lặp phong cách? Không còn là vấn đề</p>
+                <a class="btn-pick-your-case text-decoration-none" href="#">CHỌN NGAY ỐP LƯNG</a>
+            </div>
+            <div class="col-lg-6">
+                <div class="row align-items-center">
+                    <div class="col-auto flow-card">
+                        <ul class="text-decoration-none group-text">
+                            <li><i class="fas fa-circle circle-bullet" ></i>Bạn là người thích sự duy nhất</li>
+                            <li><i class="fas fa-circle circle-bullet"></i>Bạn muốn thiết kế chiếc ốp lưng cho riêng mình?</li>
+                            <li><i class="fas fa-circle circle-bullet"></i>Hãy để chúng tôi giúp bạn làm điều đó. <a href="#">Click!</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
