--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -89,8 +89,13 @@ footer {
     color:black;
 }
 .clip-background {
-    clip-path: polygon(0 0, 84% 0, 60% 100%, 0% 100%);
-    height: 500px;
+    background-image:url('../Resource/Path 3.svg');
+    background-size:cover;
+    background-repeat:no-repeat;
+    border:none;
+}
+.clip-background .container {
+    padding: 70px 1.3rem 70px 70px;
 }
 ul li{
     list-style-type:none;
@@ -98,6 +103,39 @@ ul li{
 .big-header{
     color:white;
     font-weight:bold;
-    font-size:60px;
+    font-size:55px;
     line-height:70px;
+}
+.smaller-header {
+    color: white;
+    font-size:22px;
+    font-weight:200;
+}
+.btn-pick-your-case {
+    display: inline-block;
+    font-weight: bold;
+    color: #0D2A54;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: #FCF295;
+    border: 1px solid transparent;
+    padding: 10px 20px;
+    font-size: 18px;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    text-decoration: none;
+    border-radius:20px;
+    margin-top:80px;
+}
+.btn-pick-your-case:hover {
+    color: #0D2A54;
+}
+.flow-card {
+    background-color: #FFFFFF;
+    padding:15px;
 }
