--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
 
 
     </div>
-    <div class="container sticky-top container-hard">
+    <div class="container sticky-top container-hard border-0">
 
         <nav class="navbar bg-info navbar-dark navbar-expand-lg ">
             <a class="navbar-brand" href="#">Ốp xịn</a>
@@ -145,7 +145,7 @@
                         <li class="nav-item" id="SignInBtn"><a data-toggle="modal" href="#modalSignIn" class="btn btn-success">Sign in</a></li>
                         <li class="nav-item" id="SignUpBtn"><a data-toggle="modal" href="#modalSignUp" class="nav-link">Sign up</a></li>
                     }
-                    <li class="nav-item" id="CartBtn"><a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i> <span class="badge badge-light">9</span></a></li>
+                    <li class="nav-item" id="CartBtn"><a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i> <span class="badge badge-light item-counter">9</span></a></li>
                 </ul>
             </div>
         </nav>
