--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -12,12 +12,14 @@ ViewBag.Active = "#HomeBtn";
                 <a class="btn-pick-your-case text-decoration-none" href="#">CHỌN NGAY ỐP LƯNG</a>
             </div>
             <div class="col-lg-6">
-                <div class="row align-items-center">
+                <div class="row align-items-center h-100">
                     <div class="col-auto flow-card">
                         <ul class="text-decoration-none group-text">
-                            <li><i class="fas fa-circle circle-bullet" ></i>Bạn là người thích sự duy nhất</li>
-                            <li><i class="fas fa-circle circle-bullet"></i>Bạn muốn thiết kế chiếc ốp lưng cho riêng mình?</li>
-                            <li><i class="fas fa-circle circle-bullet"></i>Hãy để chúng tôi giúp bạn làm điều đó. <a href="#">Click!</a></li>
+                            <nobr>
+                                <li><i class="fas fa-circle circle-bullet"></i> <span>Bạn là người thích sự duy nhất</span></li>
+                                <li><i class="fas fa-circle circle-bullet"></i> <span>Bạn muốn thiết kế chiếc ốp lưng cho riêng mình?</span></li>
+                                <li><i class="fas fa-circle circle-bullet"></i> <span>Hãy để chúng tôi giúp bạn làm điều đó. <a href="#">Click!</a></span></li>
+                            </nobr>
                         </ul>
                     </div>
                 </div>
@@ -25,23 +27,9 @@ ViewBag.Active = "#HomeBtn";
         </div>
     </div>
 </div>
-<div class="container pt-3 pb-3">
+<div class="container no-gutters">
     <div class="row">
-        <div class="col-md-7 text-left ">
-            <h3 class="text-justify text-primary">OPXIN.COM - TRANG ĐIỆN TỬ BÁN ỐP ĐIỆN THOẠI XỊN HÀNG ĐẦU VIỆT NAM</h3>
-            <p class="text-justify text-success">
-                Mua hàng trực tuyến (mua hàng online) mang lại sự tiện lợi, lựa chọn đa dạng hơn và các dịch vụ tốt hơn cho người tiêu dùng, thế nhưng người tiêu dùng Việt Nam vẫn chưa tận hưởng được những tiện ích đó. Chính vì vậy opxin.com Việt Nam được triển khai với mong muốn trở thành trang trực tuyến bán ốp điện thoại số 1 tại Việt Nam, nơi bạn có thể chọn lựa chọn nhiều mẫu mã, cung cấp cho rất nhiều dòng điện thoại, tự tay thiết kế ốp lưng cho chính bạn,...
-            </p>
-            <p class="text-justify text-success">Khi mua hàng qua mạng tại Opxin.com khách hàng sẽ được hưởng các tiện ích như sau:</p>
-            <ul class="text-justify text-success">
-                <li>Dịch vụ chăm sóc khách hàng tận tình trước-trong-sau khi mua hàng 24/7</li>
-                <li>Mức giá cạnh tranh: sản phẩm luôn có mức giá thấp hơn so với thị trường</li>
-                <li>Giao hàng miễn phí (với đơn hàng trên 100.000vnd) trên toàn quốc</li>
-                <li>Uy tín đem đến sự yên tâm và tiện lợi khi mua sắm</li>
-            </ul>
-        </div>
-
-        <div class="col-md-5">
+        <div class="col-12 p-0 position-relative">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -51,16 +39,19 @@ ViewBag.Active = "#HomeBtn";
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="~/Resource/slideshow1.jpg" class="d-block w-100" alt="SlideShow Pictures">
+                        <img src="~/Resource/BANNERR_2048x.png" class="d-block w-100" alt="SlideShow Pictures">
                     </div>
                     <div class="carousel-item">
-                        <img src="~/Resource/slideshow2.jpg" class="d-block w-100" alt="SlideShow Pictures">
+                        <img src="~/Resource/PHONE-BANNER_2000x.png" class="d-block w-100" alt="SlideShow Pictures">
                     </div>
                     <div class="carousel-item">
-                        <img src="~/Resource/slideshow3.jpg" class="d-block w-100" alt="SlideShow Pictures">
+                        <img src="~/Resource/phone-case-banner.jpg" class="d-block w-100" alt="SlideShow Pictures">
                     </div>
                     <div class="carousel-item">
-                        <img src="~/Resource/slideshow4.jpg" class="d-block w-100" alt="SlideShow Pictures">
+                        <img src="~/Resource/phone-cases-banner_1024x1024.gif" class="d-block w-100" alt="SlideShow Pictures">
+                    </div>
+                    <div class="container w-100 h-100">
+
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -71,7 +62,9 @@ ViewBag.Active = "#HomeBtn";
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+
             </div>
+            
         </div>
     </div>
 </div>
@@ -88,7 +81,7 @@ ViewBag.Active = "#HomeBtn";
                                 <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark">
 
                                     <div class="card border-0">
-                                        <img src="/@item.ImageLink" alt="Alternate Text" width="245px" height="480px" />
+                                        <img src="/@item.ImageLink" alt="Alternate Text" width="100px" height="210px" />
                                         <img src="~/Resource/price.png" alt="Alternate Text" class="card-img-overlay ml-auto p-0" />
 
                                     </div>
@@ -130,7 +123,7 @@ ViewBag.Active = "#HomeBtn";
                                 <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark">
 
                                     <div class="card border-0">
-                                        <img src="/@item.ImageLink" alt="Alternate Text" width="245px" height="480px" />
+                                        <img src="/@item.ImageLink" alt="Alternate Text" width="100px" height="210px" />
                                         <img src="~/Resource/price.png" alt="Alternate Text" class="card-img-overlay ml-auto p-0" />
 
                                     </div>
