--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -15,11 +15,9 @@ ViewBag.Active = "#HomeBtn";
                 <div class="row align-items-center h-100">
                     <div class="col-auto flow-card">
                         <ul class="text-decoration-none group-text">
-                            <nobr>
-                                <li><i class="fas fa-circle circle-bullet"></i> <span>Bạn là người thích sự duy nhất</span></li>
-                                <li><i class="fas fa-circle circle-bullet"></i> <span>Bạn muốn thiết kế chiếc ốp lưng cho riêng mình?</span></li>
-                                <li><i class="fas fa-circle circle-bullet"></i> <span>Hãy để chúng tôi giúp bạn làm điều đó. <a href="#">Click!</a></span></li>
-                            </nobr>
+                                <li><div class="circle-bullet"></div> <span>Bạn là người thích sự duy nhất</span></li>
+                                <li><div class="circle-bullet circle-bullet-2"></div> <span>Bạn muốn thiết kế chiếc ốp lưng<br />cho riêng mình?</span></li>
+                                <li><div class="circle-bullet"></div> <span>Hãy để chúng tôi giúp bạn. <a href="#">Click!</a></span></li>
                         </ul>
                     </div>
                 </div>
@@ -50,9 +48,6 @@ ViewBag.Active = "#HomeBtn";
                     <div class="carousel-item">
                         <img src="~/Resource/phone-cases-banner_1024x1024.gif" class="d-block w-100" alt="SlideShow Pictures">
                     </div>
-                    <div class="container w-100 h-100">
-
-                    </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -68,44 +63,72 @@ ViewBag.Active = "#HomeBtn";
         </div>
     </div>
 </div>
-<div class="container pt-5">
-    <a href="#" class="text-decoration-none"><h2 class="pl-4  text-danger">Hot!</h2></a>
-    <div class="row">
-        <div class="col-12 overflow-auto">
-            <table>
-                <tr>
-                    @foreach (var item in Model.ListHot)
-                    {
-                        <td>
-                            <div class="col-auto mx-auto py-3">
-                                <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark">
+<div class="container px-0">
+    <div class="container container-recommend">
+        <a href="#" class="text-decoration-none"><h2 class="pl-4 pt-4 text-recommend">Ốp lưng đề cử</h2></a>
+        <div class="row">
+            <div class="col-12">
+                <div id="carouselRecommend" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselRecommend" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselRecommend" data-slide-to="1"></li>
+                        <li data-target="#carouselRecommend" data-slide-to="2"></li>
+                        <li data-target="#carouselRecommend" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row">
+                                @for (int i = 1; i < 5; i++)
+                                {
+                                    var item = Model.ListBestSaler[i];
+                                    <div class="col-auto mx-auto py-3">
+                                        <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark">
 
-                                    <div class="card border-0">
-                                        <img src="/@item.ImageLink" alt="Alternate Text" width="100px" height="210px" />
-                                        <img src="~/Resource/price.png" alt="Alternate Text" class="card-img-overlay ml-auto p-0" />
-
+                                            <div class="card border-0">
+                                                <img src="/@item.ImageLink" alt="Alternate Text" class="image-on-home" />
+                                            </div>
+                                            @*<div class="card-body">
+                        <h3 class="text-center">@item.ProductName</h3>
+                        @if (item.PromotionPrice != 0)
+                        {
+                            <p class="text-center"><del><span>@item.Price</span>đ</del></p>
+                            <p class="text-center h4 text-danger">@item.PromotionPrice<span>đ</span></p>
+                        }
+                        else
+                        {
+                            <p><br /></p>
+                            <p class="text-center h4 text-danger"><span>@item.Price</span>đ</p>
+                        }
+                    </div>*@
+                                        </a>
                                     </div>
-                                    <div class="card-body">
-                                        <h3 class="text-center">@item.ProductName</h3>
-                                        @if (item.PromotionPrice != 0)
-                                        {
-                                            <p class="text-center"><del><span>@item.Price</span>đ</del></p>
-                                            <p class="text-center h4 text-danger">@item.PromotionPrice<span>đ</span></p>
-                                        }
-                                        else
-                                        {
-                                            <p><br /></p>
-                                            <p class="text-center h4 text-danger"><span>@item.Price</span>đ</p>
-                                        }
-                                    </div>
-                                </a>
+                                }
                             </div>
-                        </td>
-                    }
-                </tr>
-            </table>
+                            
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/Resource/PHONE-BANNER_2000x.png" class="d-block w-100" alt="SlideShow Pictures">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/Resource/phone-case-banner.jpg" class="d-block w-100" alt="SlideShow Pictures">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/Resource/phone-cases-banner_1024x1024.gif" class="d-block w-100" alt="SlideShow Pictures">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselRecommend" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselRecommend" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
+    
     <div class="row">
         <div class="col-12">
             <a href="#" class="btn btn-primary float-right">Click to check it out! <i class="fas fa-angle-right"></i></a>
@@ -123,7 +146,7 @@ ViewBag.Active = "#HomeBtn";
                                 <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark">
 
                                     <div class="card border-0">
-                                        <img src="/@item.ImageLink" alt="Alternate Text" width="100px" height="210px" />
+                                        <img src="/@item.ImageLink" alt="Alternate Text" width="150px" height="310px" />
                                         <img src="~/Resource/price.png" alt="Alternate Text" class="card-img-overlay ml-auto p-0" />
 
                                     </div>
