--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -199,3 +199,17 @@ ul li{
     width:150px;
     height:310px;
 }
+.multi-item-carousel .carousel-inner .carousel-item-right.active,
+.multi-item-carousel .carousel-inner .carousel-item-next {
+    transform: translateX(16.67%);
+}
+
+.multi-item-carousel .carousel-inner .carousel-item-left.active,
+.multi-item-carousel .carousel-inner .carousel-item-prev {
+    transform: translateX(-16.67%)
+}
+
+.multi-item-carousel .carousel-inner .carousel-item-right,
+.multi-item-carousel .carousel-inner .carousel-item-left {
+    transform: translateX(0);
+}
