--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -65,8 +65,14 @@ ViewBag.Active = "#HomeBtn";
 </div>
 <div class="container px-0">
     <div class="container container-recommend">
-        <a href="#" class="text-decoration-none"><h2 class="pl-4 pt-4 text-recommend">Ốp lưng đề cử</h2></a>
-        <div class="row mx-auto my-auto p-0">
+        <div class="row w-100 pr-0">
+            <a href="#" class="text-decoration-none"><h2 class="pl-4 pt-3 text-recommend">Ốp lưng đề cử</h2></a>
+            <div class="ml-auto col-auto align-self-end pr-0">
+
+                <a href="#" class="text-decoration-none text-recommend float-right">Click to check it out! <i class="fas fa-angle-right"></i></a>
+            </div>
+        </div>
+        <div class="row mx-auto my-auto py-3">
             <div class="col-12 p-0">
                 <div id="carouselRecommend" class="carousel slide w-100 multi-item-carousel p-0 row m-0" data-ride="carousel">
                     <div class="carousel-inner " role="listbox">
@@ -83,13 +89,6 @@ ViewBag.Active = "#HomeBtn";
                                 </div>
                             </div>
                         }
-
-
-
-
-
-
-
                     </div>
                     <a class="carousel-control-prev" href="#carouselRecommend" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -101,97 +100,44 @@ ViewBag.Active = "#HomeBtn";
                     </a>
                 </div>
             </div>
-                
         </div>
     </div>
-    
-    <div class="row">
-        <div class="col-12">
-            <a href="#" class="btn btn-primary float-right">Click to check it out! <i class="fas fa-angle-right"></i></a>
+    <div class="container container-lasted">
+        <div class="row w-100 pr-0">
+            <a href="#" class="text-decoration-none"><h2 class="pl-4 pt-3 text-lasted">Ốp lưng mới nhất!</h2></a>
+            <div class="ml-auto col-auto align-self-end pr-0">
+
+                <a href="#" class="text-decoration-none text-lasted float-right">Click to check it out! <i class="fas fa-angle-right"></i></a>
+            </div>
         </div>
-    </div>
-    <a href="#" class="text-decoration-none"><h2 class="pl-4  text-info">Just come out!</h2></a>
-    <div class="row">
-        <div class="col-12 overflow-auto">
-            <table>
-                <tr>
-                    @foreach (var item in Model.ListNew)
-                    {
-                        <td>
-                            <div class="col-auto mx-auto py-3">
-                                <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark">
-
-                                    <div class="card border-0">
-                                        <img src="/@item.ImageLink" alt="Alternate Text" width="150px" height="310px" />
-                                        <img src="~/Resource/price.png" alt="Alternate Text" class="card-img-overlay ml-auto p-0" />
-
-                                    </div>
-                                    <div class="card-body">
-                                        <h3 class="text-center">@item.ProductName</h3>
-                                        @if (item.PromotionPrice != 0)
-                                        {
-                                            <p class="text-center"><del><span>@item.Price</span>đ</del></p>
-                                            <p class="text-center h4 text-danger">@item.PromotionPrice<span>đ</span></p>
-                                        }
-                                        else
-                                        {
-                                            <p><br /></p>
-                                            <p class="text-center h4 text-danger"><span>@item.Price</span>đ</p>
-                                        }
-                                    </div>
-                                </a>
+        <div class="row mx-auto my-auto py-3">
+            <div class="col-12 p-0">
+                <div id="carouselLasted" class="carousel slide w-100 multi-item-carousel p-0 row m-0" data-ride="carousel">
+                    <div class="carousel-inner " role="listbox">
+                        <div class="carousel-item active">
+                            <div class="col-2 d-block float-left">
+                                <img src="/@Model.ListNew[0].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                             </div>
-                        </td>
-                    }
-                </tr>
-            </table>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <a href="#" class="btn btn-primary float-right">Click to check it out! <i class="fas fa-angle-right"></i></a>
-        </div>
-    </div>
-    <a href="#" class="text-decoration-none"><h2 class="pl-4  text-primary">Best saler!</h2></a>
-    <div class="row">
-        <div class="col-12 overflow-auto">
-            <table>
-                <tr>
-                    @foreach (var item in Model.ListBestSaler)
-                    {
-                        <td>
-                            <div class="col-auto mx-auto py-3">
-                                <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark">
-
-                                    <div class="card border-0">
-                                        <img src="/@item.ImageLink" alt="Alternate Text" width="245px" height="480px" />
-                                        <img src="~/Resource/price.png" alt="Alternate Text" class="card-img-overlay ml-auto p-0" />
-
-                                    </div>
-                                    <div class="card-body">
-                                        <h3 class="text-center">@item.ProductName</h3>
-                                        @if (item.PromotionPrice != 0)
-                                        {
-                                            <p class="text-center"><del><span>@item.Price</span>đ</del></p>
-                                            <p class="text-center h4 text-danger">@item.PromotionPrice<span>đ</span></p>
-                                        }
-                                        else
-                                        {
-                                            <p><br /></p>
-                                            <p class="text-center h4 text-danger"><span>@item.Price</span>đ</p>
-                                        }
-                                    </div>
-                                </a>
+                        </div>
+                        @for (int i = 1; i < Model.ListNew.Count; i++)
+                        {
+                            <div class="carousel-item ">
+                                <div class="col-2 d-block float-left">
+                                    <img src="/@Model.ListNew[i].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                </div>
                             </div>
-                        </td>
-                    }
-                </tr>
-            </table>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <a href="#" class="btn btn-primary float-right">Click to check it out! <i class="fas fa-angle-right"></i></a>
+                        }
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselLasted" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselLasted" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -224,19 +170,7 @@ ViewBag.Active = "#HomeBtn";
         $('#carouselRecommend').carousel({
             interval: false
         });
-        $('#carouselRecommend.carousel .carousel-item').each(function () {
-            //var next = $(this).next();
-            //if (!next.length) {
-            //    next = $(this).siblings(':first');
-            //}
-            //next.children(':first-child').clone().appendTo($(this));
-
-            //if (next.next().length > 0) {
-            //    next.next().children(':first-child').clone().appendTo($(this));
-            //}
-            //else {
-            //    $(this).siblings(':first').children(':first-child').clone().appendTo($(this));
-            //}
+        $('.multi-item-carousel .carousel-item').each(function () {
             appendSlide(($(this)), ($(this)).next(), 5);
         });
         function appendSlide(node,next, n) {
