--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@ ViewBag.Active = "#HomeBtn";
                 <p class="smaller-header">Trùng lặp phong cách? Không còn là vấn đề</p>
                 <div class="row w-100">
                     <div class="col-auto mx-auto mx-lg-0">
-                        <a class="btn-pick-your-case text-decoration-none" href="#">CHỌN NGAY ỐP LƯNG</a>
+                        <a class="btn-pick-your-case text-decoration-none" href="/Product">CHỌN NGAY ỐP LƯNG</a>
                     </div>
                 </div>
                 
@@ -22,7 +22,7 @@ ViewBag.Active = "#HomeBtn";
                         <ul class="text-decoration-none group-text">
                                 <li><div class="circle-bullet"></div> <span>Bạn là người thích sự duy nhất</span></li>
                                 <li><div class="circle-bullet circle-bullet-2"></div> <span>Bạn muốn thiết kế chiếc ốp lưng<br />cho riêng mình?</span></li>
-                                <li><div class="circle-bullet"></div> <span>Hãy để chúng tôi giúp bạn. <a href="#">Click!</a></span></li>
+                                <li><div class="circle-bullet"></div> <span>Hãy để chúng tôi giúp bạn. <a href="/Design">Click!</a></span></li>
                         </ul>
                     </div>
                 </div>
